hphp/hack/test/typecheck/inout/bad_inout_use_lvalue1.php.exp
File "bad_inout_use_lvalue1.php", line 6, characters 11-12:
Invalid lvalue (Parsing[1002])
